# OnixEngine

./: CMakeLists.txt  README.md  compile_commands.json
include/: Buffers.hpp  Essentials.hpp  Object.hpp  Onix.hpp  Onix_Physics.hpp  Shader.hpp  Texture.hpp  Window.hpp
include/glad/: glad.h
resources/: shader.frag  shader.vert
src/: Buffers.cpp  Onix.cpp  Texture.cpp  Window.cpp  glad.c  main-gl.cpp  main.cpp  main_gl.cpp  test_1.cpp  test_2.cpp
src/lib/: Buffers.cpp  Object.cpp  Onix.cpp  Onix_Physics.cpp  Shader.cpp  Texture.cpp  Window.cpp
